j'ai crée des nouveaux compsants

--- a/src/app/_destop/login/login.component.html
+++ b/src/app/_destop/login/login.component.html
@@ -1,12 +1,7 @@
 <div class="container">
-  <div class="image-view">
-    <img src="/assets/images/Rectangle 2756.png" alt="image presentation" />
-  </div>
+  <app-image-view></app-image-view>
   <div class="auth-user">
-    <div class="logo-avatar">
-      <img src="/assets/images/Avatar-UI-Unicorn-V2.png" alt="avatar" />
-      <h3>Uniform Logo </h3>
-    </div>
+    <app-logo-avatar></app-logo-avatar>
     <div class="login-user">
       <div class="connexUser">
         <form>
