--- a/src/app/_destop/login/login.component.scss
+++ b/src/app/_destop/login/login.component.scss
@@ -1,41 +1,15 @@
 .container {
   display: flex;
+  height: 100px;
+  width: 100%;
 
-  .image-view {
-    flex: 6;
 
 
 
   .auth-user {
     flex: 4;
 
-    .logo-avatar {
-      display: flex;
-
-      img {
-        margin: 10px;
-      }
-    }
-
     .login-user {
-
-      /*
-      input[type=submit] {
-        background-color: #1850de;
-        border: none;
-        color: white;
-        padding: 16px 32px;
-        text-decoration: none;
-        margin: 4px 2px;
-        cursor: pointer;
-        width: 70%;
-      }
-     
-
-       */
-
-
-
       .connexUser {
         border-radius: 5px;
         background-color: #f2f2f2;
@@ -44,17 +18,13 @@
         .logo-pwd {
           display: flex;
 
-
           #img-pwd {
             height: 10px;
             width: 20px;
             float: right;
             position: absolute;
             right: 10px;
-
-
           }
-
         }
 
 
