suppresion de componant

--- a/src/app/_destop/login/login.component.html
+++ b/src/app/_destop/login/login.component.html
@@ -5,8 +5,8 @@
     <div class="login-user">
       <div class="connexUser">
         <form>
-          <app-user-login></app-user-login>
-          <app-user-password></app-user-password>
+          <app-input></app-input>
+          <app-input></app-input>
           <app-sign-it></app-sign-it>
         </form>
       </div>
