--- a/src/app/_destop/sign-it/sign-it.component.html
+++ b/src/app/_destop/sign-it/sign-it.component.html
@@ -1,4 +1,4 @@
  <div class="container-signIt">
    <input type="submit" value="Sign it">
-   <button>Sign in Google</button>
+   <button (click)="signGoogle()">Sign in Google</button>
  </div>
