ngOnit et @Input

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,9 +5,8 @@
     <div class="login-user">
       <div class="connexUser">
         <form>
-          <app-input></app-input>
-          <app-input></app-input>
-          <app-sign-it></app-sign-it>
+          <app-input-container></app-input-container>
+          <app-button></app-button>
         </form>
       </div>
     </div>
