--- a/src/app/_components/sign-it/sign-it.component.scss
+++ b/src/app/_components/sign-it/sign-it.component.scss
@@ -11,6 +11,12 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+
+
+  }
+
+  .secondary {
+    background-color: #060606 !important;
   }
 
   button {
