--- a/src/app/_components/input-container/input-container.component.html
+++ b/src/app/_components/input-container/input-container.component.html
@@ -1,2 +1,2 @@
- <app-input type="text" placeholder="Username" label="Login"></app-input>
- <app-input type="password" id="pass" name="Password" placeholder="Password " label="Password"></app-input>
+ <app-input type="text" placeholder="Username" label="Identifiant"></app-input>
+ <app-input type="password" name="Password" placeholder="Password" label="Mot de passe"></app-input>
