--- a/src/app/_components/sign-it/sign-it.component.html
+++ b/src/app/_components/sign-it/sign-it.component.html
@@ -1,5 +1,5 @@
  <div class="container-signIt">
-   <button type="button" class="btn" (click)="clickEmitter.emit()">
+   <button type="button" [class]="class">
      <span>{{value}}</span>
    </button>
  </div>
