--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -5,7 +5,10 @@
     <div class="login-user">
       <div class="connexUser">
         <router-outlet></router-outlet>
-
+        <div class="remerberMe">
+          <a routerLink="/forgetpassword">Mot de passe oublié</a>
+          <a routerLink="/signit">Souviens toi de moi </a>
+        </div>
       </div>
     </div>
   </div>
