--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -15,6 +15,13 @@
         background-color: #f2f2f2;
         padding: 20px;
 
+        .remerberMe {
+          display: flex;
+          justify-content: space-between;
+        }
+
+
+
         .logo-pwd {
           display: flex;
 
