--- a/src/app/_components/input/input.component.html
+++ b/src/app/_components/input/input.component.html
@@ -1,4 +1,5 @@
 <div class="container-input">
   <label [for]="name">{{label}}</label>
-  <input [type]="type" [id]="id" [name]="name" [placeholder]="placeholder">
+  <input [type]="type" [id]="id" [name]="name" [placeholder]="placeholder" #inputEmail
+    (change)="emitInput(inputEmail.value)">
 </div>
