--- a/src/app/_components/logo-avatar/logo-avatar.component.html
+++ b/src/app/_components/logo-avatar/logo-avatar.component.html
@@ -1,4 +1,4 @@
  <div class="logo-avatar">
-   <img src="/assets/images/Avatar-UI-Unicorn-V2.png" alt="avatar" />
+   <img src="/assets/images/Avatar-UI-Unicorn-V2.png" alt="avatar" routerLink="/" />
    <h3>Uniform Logo </h3>
  </div>
