--- a/src/app/auth/login-form/login-form.component.html
+++ b/src/app/auth/login-form/login-form.component.html
@@ -1,4 +1,8 @@
 <form>
   <app-input-container></app-input-container>
   <app-button></app-button>
+  <div class="remerberMe">
+    <a routerLink="/register">Mot de passe oublié</a>
+    <a routerLink="/signit">Souviens toi de moi </a>
+  </div>
 </form>
