--- a/src/app/_components/image-view/image-view.component.scss
+++ b/src/app/_components/image-view/image-view.component.scss
@@ -4,6 +4,13 @@
   img {
     height: 800px;
     width: 800px;
+    display: block;
+
+    @media (max-width: 800px) {
+      display: none;
+    }
+
   }
+
 
 }
