--- a/src/app/_components/button/button.component.html
+++ b/src/app/_components/button/button.component.html
@@ -1,3 +1,3 @@
 <app-sign-it type="button" value="Connexion" class="connexion"></app-sign-it>
 
-<app-sign-it type="button" value="Sign in Google" class="signIn"></app-sign-it>
+<app-sign-it routerLink="/register" type="button" value="Sign in Google" class="signIn"></app-sign-it>
