--- a/src/app/auth/register-form/register-form.component.scss
+++ b/src/app/auth/register-form/register-form.component.scss
@@ -16,10 +16,14 @@ select {
 
 .deleteNumber {
   cursor: pointer;
+  font-weight: bold;
 }
 
 .addNumber {
   cursor: pointer;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  font-size: 1.2em;
 }
 
 .addNumber2 {
